--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -7,17 +7,45 @@
 }
 
 .post-title {
+  color: whitesmoke;
+  font-size: 1.5em;
+}
+
+.post-title a {
+  text-decoration: none;
+  color: whitesmoke;
+  font-size: 1.5em;
+}
+
+.post-title-animation {
+  border-bottom: 1px solid var(--secondary-alt-color);
   padding-bottom: 0.1em;
-  border-bottom: 1px solid var(--secondary-color);
   margin-bottom: 0.5em;
-  font-size: 2em;
+  width: 30%;
 }
 
 .post-date {
   font-size: 0.85em;
   font-style: italic;
+  color: rgb(180, 180, 180);
 }
 
 .post-content {
   font-size: 1.3em;
+  color: white;
+}
+
+.post-title:hover {
+  color: grey;
+}
+
+.post-title:hover + .post-title-animation {
+  animation: animate-title 1s forwards;
+  border-bottom: 2px solid var(--secondary-alt-color);
+}
+
+@keyframes animate-title {
+  100% {
+    width: 80%;
+  }
 }
