--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,13 +13,14 @@
 .header a {
   color: inherit;
   text-decoration: none;
+  font-family: serif;
+  font-size: 1.75em;
 }
 
 .header-title {
   display: inline-block;
   color: lightgoldenrodyellow;
   font-weight: bold;
-  font-size: 2em;
   text-transform: uppercase;
 }
 
@@ -38,4 +39,12 @@
   padding: 0em 1em;
   text-decoration: none;
   font-size: 1.2em;
+}
+
+.header-search {
+  padding: 0.75em 0.75em;
+  background-color: rgb(50, 50, 50);
+  border-radius: 1em;
+  border: 2px solid grey;
+  color: white;
 }
