--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -1,11 +1,14 @@
 .post {
   border-bottom: 1px solid grey;
   padding-bottom: 2em;
+  /* background-color: rgba(128, 128, 128, 0.123); */
+  /* padding: 1em; */
+  /* border-radius: 1em; */
 }
 .posts-container {
   padding-top: 1em;
 }
- 
+
 .post + .post {
   margin-top: 2.5em;
 }
