--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,7 +13,6 @@
 .header a {
   color: inherit;
   text-decoration: none;
-  font-family: serif;
   font-size: 1.75em;
 }
 
@@ -43,8 +42,19 @@
 
 .header-search {
   padding: 0.75em 0.75em;
-  background-color: rgb(50, 50, 50);
-  border-radius: 1em;
-  border: 2px solid grey;
+  background-color: transparent;
+  border: 1px solid whitesmoke;
+  border-radius: 5px;
+}
+
+.header-search::placeholder {
   color: white;
+}
+
+.header-search:focus {
+  background-color: rgba(245, 245, 245, 0.26);
+}
+
+.header-search:focus::placeholder {
+  color: black;
 }
