--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,4 @@
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: sticky;
   top: 0;
   width: 100%;
@@ -10,28 +7,32 @@
   color: white;
 }
 
+.header-title {
+  grid-row: 1/5;
+  grid-column: 1/3;
+  color: lightgoldenrodyellow;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 0em 0.5em;
+}
+
+.header-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  place-items: center;
+}
+
+.header-nav {
+  grid-column: 3/5;
+  grid-row: 1/3;
+  padding: 1.25em 0em;
+}
+
 .header a {
   color: inherit;
   text-decoration: none;
   font-size: 1.75em;
-}
-
-.header-title {
-  display: inline-block;
-  color: lightgoldenrodyellow;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.header-content {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header-nav {
-  display: inline-block;
 }
 
 .header-nav ul a {
@@ -41,14 +42,19 @@
 }
 
 .header-search {
-  padding: 0.75em 0.75em;
+  padding: 0.75em 0em;
+  margin: 0em 0.5em;
   background-color: transparent;
   border: 1px solid whitesmoke;
   border-radius: 5px;
+  grid-row: 3/5;
+  grid-column: 3/5;
+  width: min-content;
 }
 
 .header-search::placeholder {
   color: white;
+  padding-left: 1em;
 }
 
 .header-search:focus {
