--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -1,9 +1,6 @@
 .post {
   border-bottom: 1px solid grey;
   padding-bottom: 2em;
-  /* background-color: rgba(128, 128, 128, 0.123); */
-  /* padding: 1em; */
-  /* border-radius: 1em; */
 }
 .posts-container {
   padding-top: 1em;
@@ -38,6 +35,12 @@
   color: rgb(180, 180, 180);
   padding: 0.5em 0;
   font-size: 1.2em;
+}
+
+.post-date-history {
+  padding-left: 0.5em;
+  font-size: 0.95em;
+  color: rgb(225, 225, 225);
 }
 
 .post-description {
