--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ html {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin: 1em;
-  font-size: 1.22em;
+  margin: 1em 0.4em;
+  font-size: 1.5em;
 }
 
 .page-navigation a {
@@ -54,7 +54,7 @@ html {
 .scroll-top {
   margin: 1.5em;
   color: white;
-  font-size: 1.1em;
+  font-size: 1.6em;
 }
 
 .scroll-top > span:hover {
@@ -68,4 +68,26 @@ html {
   padding: 0em 1em;
   color: whitesmoke;
   font-size: 1.5em;
+}
+
+@media (max-width: 380px) {
+  .page-navigation {
+    font-size: 1em;
+  }
+  .scroll-top {
+    margin: 1.5em;
+    color: white;
+    font-size: 1.25em;
+  }
+}
+
+@media (min-width: 381px) and (max-width: 480px) {
+  .page-navigation {
+    font-size: 1.2em;
+  }
+  .scroll-top {
+    margin: 1.5em;
+    color: white;
+    font-size: 1.4em;
+  }
 }
