--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,25 +7,21 @@
   color: white;
 }
 
+.header-content {
+  min-height: 7.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header-title {
-  grid-row: 1/5;
-  grid-column: 1/3;
   color: lightgoldenrodyellow;
   font-weight: bold;
   text-transform: uppercase;
   padding: 0em 0.5em;
 }
 
-.header-content {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  place-items: center;
-}
-
 .header-nav {
-  grid-column: 3/5;
-  grid-row: 1/3;
   padding: 1.25em 0em;
 }
 
@@ -42,14 +38,11 @@
 }
 
 .header-search {
-  padding: 0.75em 0em;
-  margin: 0em 0.5em;
+  padding: 0.75em 1em;
+  margin: 1em 1em;
   background-color: transparent;
   border: 1px solid whitesmoke;
   border-radius: 5px;
-  grid-row: 3/5;
-  grid-column: 3/5;
-  width: min-content;
 }
 
 .header-search::placeholder {
@@ -63,4 +56,26 @@
 
 .header-search:focus::placeholder {
   color: black;
+}
+
+.menu-button {
+  margin-right: 1em;
+  background-color: transparent;
+  border: none;
+  position: relative;
+}
+
+.menu-img {
+  object-fit: contain;
+  width: 4em;
+}
+
+.menu-button:hover > .menu-img {
+  filter: opacity(0.5);
+}
+
+.menu {
+  position: absolute;
+  right: 0;
+  background-color: rgb(202, 202, 202);
 }
