--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,12 +3,12 @@
   top: 0;
   width: 100%;
   background: var(--primary-gradient);
-  min-height: 7.5em;
+  min-height: 7em;
   color: white;
 }
 
 .header-content {
-  min-height: 7.5em;
+  min-height: 7em;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -19,6 +19,7 @@
   font-weight: bold;
   text-transform: uppercase;
   padding: 0em 0.5em;
+  font-size: 1.7em;
 }
 
 .header-nav {
@@ -59,6 +60,7 @@
 
 .menu-button {
   margin-right: 1em;
+  margin-top: 0.2em;
   background-color: transparent;
   border: none;
   position: relative;
@@ -66,7 +68,7 @@
 
 .menu-img {
   object-fit: contain;
-  width: 4em;
+  width: 2.5em;
 }
 
 .menu-button:hover > .menu-img {
