--- a/src/styles/create-post.css
+++ b/src/styles/create-post.css
@@ -8,7 +8,7 @@
   flex-flow: column wrap;
   padding: 1em 1em;
 }
- 
+
 .create-post form > * {
   width: 100%;
 }
@@ -23,7 +23,7 @@ form * + * {
   font-family: serif;
 }
 
-.create-post :is(input, textarea) {
+.create-post :is(input) {
   padding: 1em;
   border-radius: 7px;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -46,4 +46,12 @@ form * + * {
 
 .create-post button:hover {
   filter: saturate(2.5);
+}
+
+.editor-wrapper {
+  z-index: 0;
+}
+
+.codex-editor {
+  background-color: rgba(245, 245, 245, 0.904);
 }
