--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ html {
 .page-title {
   padding: 0.5em;
   text-align: center;
-  font-size: 2.75em;
+  font-size: 2.5em;
   color: rgb(200, 200, 200);
   text-transform: uppercase;
   font-family: serif;
@@ -99,6 +99,7 @@ html {
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/header.css ***!
   \*************************************************************************/
 .header {
+  z-index: 1;
   position: sticky;
   top: 0;
   width: 100%;
@@ -144,18 +145,24 @@ html {
   background-color: transparent;
   border: 1px solid whitesmoke;
   border-radius: 5px;
+  color: whitesmoke;
+  border-radius: 7px;
 }
 
 .header-search::placeholder {
-  color: black;
+  color: whitesmoke;
 }
 
 .header-search:focus {
-  background-color: rgba(245, 245, 245, 0.26);
+  background-color: rgba(240, 240, 240, 0.26);
 }
 
 .header-search:focus::placeholder {
-  color: black;
+  color: whitesmoke;
+}
+
+.header-search::selection {
+  color: darkgray;
 }
 
 .menu-button {
@@ -167,8 +174,8 @@ html {
 }
 
 .menu-img {
-  object-fit: contain;
-  width: 2.5em;
+  object-fit: cover;
+  width: 3.5em;
 }
 
 .menu-button:hover > .menu-img {
@@ -178,17 +185,44 @@ html {
 .menu {
   position: absolute;
   right: 0;
-  background: linear-gradient(0deg, rgb(88, 88, 88), rgb(170, 170, 170));
+  background: linear-gradient(10deg, black, rgb(80, 80, 80));
+  border-radius: 7px;
+}
+
+.searched {
+  position: absolute;
+  background: transparent;
+  width: 100%;
+  text-align: center;
+}
+
+.searched-value {
+  padding: 0.5em;
+  background-color: rgb(80, 80, 80, 0.8);
+  color: whitesmoke;
+  border-radius: 7px;
+}
+
+.searched-close {
+  padding: 0.5em;
+  background-color: rgba(255, 0, 0, 0.5);
+  color: whitesmoke;
+  border-radius: 7px;
 }
 
 /*!************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/posts.css ***!
   \************************************************************************/
 .post {
-  border-bottom: 1px solid grey;
-  padding-bottom: 2em;
   padding-left: 0.75em;
   padding-right: 0.5em;
+}
+
+.post-divider {
+  width: 60%;
+  border-bottom: 1px solid grey;
+  padding-top: 2em;
+  margin: auto;
 }
 .posts-container {
   padding-top: 1em;
@@ -207,7 +241,7 @@ html {
 .post-title a {
   text-decoration: none;
   color: whitesmoke;
-  font-size: 1.8em;
+  font-size: 1.6em;
   font-family: serif;
 }
 
@@ -230,6 +264,7 @@ html {
 .post-date-history {
   font-size: 0.75em;
   color: rgb(225, 225, 225);
+  padding-left: 0.5em;
 }
 
 .post-calendar-icon {
@@ -271,6 +306,63 @@ html {
   }
 }
 
+/*!***************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/code-box.css ***!
+  \***************************************************************************/
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #282a36;
+}
+.hljs-keyword,
+.hljs-selector-tag,
+.hljs-literal,
+.hljs-section,
+.hljs-link {
+  color: #8be9fd;
+}
+.hljs-function .hljs-keyword {
+  color: #ff79c6;
+}
+.hljs,
+.hljs-subst {
+  color: #f8f8f2;
+}
+.hljs-string,
+.hljs-title,
+.hljs-name,
+.hljs-type,
+.hljs-attribute,
+.hljs-symbol,
+.hljs-bullet,
+.hljs-addition,
+.hljs-variable,
+.hljs-template-tag,
+.hljs-template-variable {
+  color: #f1fa8c;
+}
+.hljs-comment,
+.hljs-quote,
+.hljs-deletion,
+.hljs-meta {
+  color: #6272a4;
+}
+.hljs-keyword,
+.hljs-selector-tag,
+.hljs-literal,
+.hljs-title,
+.hljs-section,
+.hljs-doctag,
+.hljs-type,
+.hljs-name,
+.hljs-strong {
+  font-weight: bold;
+}
+.hljs-emphasis {
+  font-style: italic;
+}
+
 /*!******************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/create-post.css ***!
   \******************************************************************************/
@@ -284,7 +376,7 @@ html {
   flex-flow: column wrap;
   padding: 1em 1em;
 }
- 
+
 .create-post form > * {
   width: 100%;
 }
@@ -299,7 +391,7 @@ form * + * {
   font-family: serif;
 }
 
-.create-post :is(input, textarea) {
+.create-post :is(input) {
   padding: 1em;
   border-radius: 7px;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -322,6 +414,14 @@ form * + * {
 
 .create-post button:hover {
   filter: saturate(2.5);
+}
+
+.editor-wrapper {
+  z-index: 0;
+}
+
+.codex-editor {
+  background-color: rgba(245, 245, 245, 0.904);
 }
 
 
